[tool.poetry]
name = "cli-app-trello"
version = "0.1.0"
description = ""
authors = ["Raluca Carare <carare.raluca27@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.23.0"
ipython = "^7.14.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
